--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@phosphor-icons/react": "^2.0.14",
     "@radix-ui/react-select": "^2.0.0",
     "@splidejs/react-splide": "^0.7.12",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.0"
